istio_gateways/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # tls:
    #   mode: SIMPLE
    #   credentialName: futakai-cert
    hosts:
    - "futakai.com"
