istio_gateways/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: futakai-virtual-service
  # namespace: futakai-contents

spec:
  hosts:
  - "futakai.com"
  gateways:
  - istio-ingress-gateway
  http:
  - name: futakai-vs-routes
    route:
    - destination:
        host: futakai-contents-service.futakai-contents.svc.cluster.local

  # - match:
  #   - uri:
  #       prefix: /contents
  #   - uri:
  #       prefix: /delay
  #   route:
  #   - destination:
  #       host: futakai-contents-service.futakai-contents.svc.cluster.local
  #       port:
  #         number: 80
